# stm32-bootloader-client-rs

./: Cargo.toml
examples/: read_chip_id.rs  serialport.rs
src/: lib.rs
