[package]
name = "stm32-bootloader-client"
description = "A library for communicating with the STM32 system bootloader"
repository = "https://github.com/google/stm32-bootloader-client-rs"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
embedded-hal = "1.0.0"
defmt = { version = "1.0.1", optional = true }
log = { version = "0.4.28", optional = true }
embedded-io = "0.6.1"

[dev-dependencies]
anyhow = "1.0.38"
embedded-hal-mock = "0.11.1"
mcp2221-hal = "0.1.0"
serialport = "4.2.0"

[features]
default = ["std"]
std = []
